// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`result > rtl direction > should render correct snapshot in rtl 1`] = `
<div
  class="ant-result ant-result-success ant-result-rtl css-var-root"
>
  <div
    class="ant-result-icon"
  >
    <span
      aria-label="check-circle"
      class="anticon anticon-check-circle"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="check-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
        />
      </svg>
    </span>
  </div>
  <div
    class="ant-result-title"
  >
    Success
  </div>
  <!---->
  <!---->
  <!---->
</div>
`;

exports[`result > rtl render > component should be rendered correctly in RTL direction 1`] = `
<div
  data-v-app=""
>
  <div
    class="ant-result ant-result-info ant-result-rtl css-var-root"
  >
    <div
      class="ant-result-icon"
    >
      <span
        aria-label="exclamation-circle"
        class="anticon anticon-exclamation-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="exclamation-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
          />
        </svg>
      </span>
    </div>
    <div
      class="ant-result-title"
    >
      <!---->
    </div>
    <!---->
    <!---->
    <!---->
  </div>
</div>
`;

exports[`result > should render correct snapshot 1`] = `
<div
  class="ant-result ant-result-success css-var-root"
>
  <div
    class="ant-result-icon"
  >
    <span
      aria-label="check-circle"
      class="anticon anticon-check-circle"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="check-circle"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
        />
      </svg>
    </span>
  </div>
  <div
    class="ant-result-title"
  >
    Success
  </div>
  <div
    class="ant-result-subtitle"
  >
    Order submitted
  </div>
  <div
    class="ant-result-extra"
  >
    <button>
      Go Home
    </button>
  </div>
  <div
    class="ant-result-body"
  >
    <div>
      Detail content
    </div>
  </div>
</div>
`;
